# ICCS372-Homework1

./: .coverage  Dockerfile  README.md  app.py  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: python-tests.yml
test/: test_create_machine.py  test_create_stock.py  test_delete_machine.py  test_delete_stock.py  test_edit_machine.py  test_edit_stock.py  test_get_inventory.py  test_get_machine.py  test_get_stock.py
