[tool.poetry]
name = "iccs372homeworkl1"
version = "0.1.0"
description = ""
authors = ["Worawit Penglam <worawit.pen@student.mahidol.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.1"
cryptography = "^39.0.0"
requests = "^2.28.2"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
